# PTX-EMU

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  env.sh  test.sh
.github/: copilot-instructions.md
antlr4/: CMakeLists.txt
bench/cute/: CMakeLists.txt  cute_hello.cu  cute_hello_col_major.cu  cute_hello_tensor.cu  cute_hello_tiled_copy.cu  cute_rmsnorm.cu
bench/dummy/: Makefile  dummy.cu
bench/dummy-args/: dummy-args.cu
bench/dummy-loop/: dummy-loop.cu
bench/dummy-wmma/: dummy-wmma.cu
bench/wmma-simple/: wmma_simple.cu
configs/: ampere_a100.json  blackwell_b200.json  config.ini  debug_config.ini  gpu_config.json  hopper_h100.json  mini.json  ptx_debug.conf  trace_config.ini
docs/: arch.md  debugging_guide.md  gpgpu_arch.md  gpuspu-emu_arch.md  param_space_and_symbol_table.md  ptx-emu_arch.md  sm90_100.md  threadcontext_ownership_transfer.md
docs/ptx/: 9.7.10-11_texture.md  9.7.12_control_flow.md  9.7.13_sync_comm.md  9.7.16_tcgen05.md  9.7.17-19_dbg_misc.md  9.7.18_video.md  9.7.1_integer_arith.md  9.7.2_integer_extended.md  9.7.3-5_float.md  9.7.6-7_cmp_sel.md  9.7.8_bitwise.md  9.7.9_datatransfer_cvtx.md  README.md
examples/: debug_example.cpp  simple_ptx_test.cu
include/cudart/: cuda_driver.h  cudart_intrinsics.h  cudart_sim.h  simple_memory_allocator.h
include/memory/: hardware_memory_manager.h  memory_interface.h  memory_manager.h  resource_manager.h  shared_memory_manager.h  simple_memory.h  simple_memory_allocator.h
include/ptx_ir/: kernel_context.h  operand_context.h  param_context.h  ptx_context.h  ptx_op.def  ptx_qualifier.def  ptx_types.h  statement_context.h
include/ptx_parser/: ptx_grammar.h  ptx_parser.h  ptx_visiter.h  ptx_visitor_categories.h
include/ptxsim/: active_warp_manager.h  common_types.h  cta_context.h  debug_format.h  execution_types.h  gpu_context.h  instruction_base.h  instruction_factory.h  instruction_handler.h  instruction_handler_decl.h  instruction_handlers.h  instruction_handlers_decl.h  instruction_processor_utils.h  interpreter.h  perf_timer.h  ptx_config.h  ptx_debug.h  ptx_debugger.h  register_analyzer.h  sm_context.h  thread_context.h  warp_context.h  warp_scheduler.h
include/ptxsim/instruction_handlers/: arithmetic_handler.h  bitwise_handler.h  control_handler.h  math_handler.h  memory_handler.h  misc_handler.h  remaining_handler.h  special_handler.h  structure_handler.h
include/ptxsim/instruction_handlers.bak/: bit_manipulate.h  bitwise_handler.h  math_handler.h  misc_handler.h  special_handler.h
include/ptxsim/utils/: arithmetic_utils.h  half_utils.h  qualifier_utils.h  type_utils.h
include/register/: condition_code_register.h  register_bank_manager.h  register_manager.h
include/utils/: cubin_utils.h  logger.h
src/: CMakeLists.txt  PTXEMU.cpp  ptx-interpreter.h  ptx-semantic.h  ptxLexer.g4  ptxParser.g4
src/cudart/: cuda_driver.cpp  cudart_sim.cpp  cudart_sim.old.cpp  ptx_interpreter.cpp  ptx_interpreter.h  simple_memory_allocator.cpp
src/grammar/: ptxDeclarations.g4  ptxInstructions.g4  ptxLexer.g4  ptxOperands.g4  ptxParser.g4
src/memory/: global_allocator.cpp  hardware_memory_manager.cpp  memory_manager.cpp  resource_manager.cpp  shared_memory_manager.cpp  simple_memory.cpp  simple_memory_allocator.cpp
src/ptx_ir/: operand_context.cpp  ptx_types.cpp  ptx_types.cpp.bak  statement_context.cpp
src/ptx_parser/: ptx_parser.cpp  ptx_visitor.cpp  ptx_visitor_abi.cpp  ptx_visitor_async.cpp  ptx_visitor_atom.cpp  ptx_visitor_barrier.cpp  ptx_visitor_branch.cpp  ptx_visitor_call.cpp  ptx_visitor_generic.cpp  ptx_visitor_memory.cpp  ptx_visitor_simple.cpp  ptx_visitor_special.cpp  ptx_visitor_tensor.cpp  ptx_visitor_warp.cpp  ptx_visitor_wmma.cpp
src/ptxsim/: instruction_base.cpp  instruction_factory.cpp  instruction_handlers.cpp  register_analyzer.cpp
src/ptxsim/core/: active_warp_manager.cpp  cta_context.cpp  gpu_context.cpp  interpreter.cpp  sm_context.cpp  thread_context.cpp  warp_context.cpp  warp_scheduler.cpp
src/ptxsim/debug/: ptx_config.cpp  ptx_debug.cpp  ptx_debugger.cpp
src/ptxsim/instruction_handlers/: arithmetic_handler.cpp  bit_manipulate.cpp  bitwise_handler.cpp  control_handler.cpp  math_handler.cpp  memory_handler.cpp  misc_handler.cpp  remaining_handler.cpp  special_handler.cpp  structure_handler.cpp
src/ptxsim/instructions/: arithmetic.cpp  arithmetic_conversion.cpp  arithmetic_ext.cpp  arithmetic_muldiv.cpp  atomic.cpp  bitwise.cpp  call.cpp  comparison.cpp  control.cpp  data_transfer.cpp  math.cpp  memory.cpp  tensor.cpp  wmma.cpp
src/ptxsim/utils/: half_utils.cpp  qualifier_utils.cpp  qualifier_utils.h  type_utils.cpp
src/register/: condition_code_register.cpp  register_bank_manager.cpp
src/utils/: cubin_utils.cpp  logger.cpp
tests/: CMakeLists.txt  ptx_bitwise_shift.cu  ptx_bitwise_shift.cuh  ptx_cvt_arith.cu  ptx_cvt_arith.cuh  ptx_cvt_arith.h  ptx_cvta.cu  ptx_cvta.cuh  ptx_extended_prec.cu  ptx_extended_prec.cuh  ptx_float_arith.cu  ptx_float_arith.cuh  ptx_integer_arith.cu  ptx_integer_arith.cuh  ptx_ld_st.cu  ptx_ld_st.cuh  test-ptx.cpp  test_cc_register.cpp  test_memory_manager.cpp  test_parse_immediate.cpp  test_printf.cu  test_ptx_bitwise.cu  test_ptx_cvt.cu  test_ptx_cvta.cu  test_ptx_extended.cu  test_ptx_float.cu  test_ptx_integer.cu  test_ptx_ld_st.cu  test_wmma.cpp
tests/instructions/: test_ptx_bra.cu
tests/warp/: test_sm_context.cpp  test_warp_context.cpp  test_warp_scheduler.cpp
